Dodano możliwość usunięcia użytkownika z eventu. Drobne poprawki w User i UserDao.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.static-path-pattern=/resources/**
 
 jdbc.driverClassName = com.mysql.jdbc.Driver
 #link do bazy i dane u¿ytkownika
-jdbc.url = jdbc:mysql://localhost:3306/moveup
+jdbc.url = jdbc:mysql://localhost:3306/moveup?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
 jdbc.username = root
 jdbc.password =
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
