Zmiany w strukturze projektu. Thymeleaf zamiast JSP. Dodano stronę startową.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-spring.mvc.static-path-pattern=/resources/**
-
+spring.thymeleaf.cache=false
 jdbc.driverClassName = com.mysql.jdbc.Driver
 #link do bazy i dane u¿ytkownika
 jdbc.url = jdbc:mysql://localhost:3306/moveup?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
@@ -9,6 +6,6 @@ jdbc.username = root
 jdbc.password =
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 #aby aplikacja nie tworzy³a bazy danych od nowa za ka¿dym razem zmieniæ create na update
-hibernate.hbm2ddl.auto = create
+hibernate.hbm2ddl.auto = update
 hibernate.show_sql = true
 hibernate.format_sql =  true
