--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <version>0.3m</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
