--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ jdbc.username = root
 jdbc.password =
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 #aby aplikacja nie tworzy³a bazy danych od nowa za ka¿dym razem zmieniæ create na update
-hibernate.hbm2ddl.auto = create
+hibernate.hbm2ddl.auto = update
 hibernate.show_sql = true
 hibernate.format_sql =  true
