--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ jdbc.password =
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 #aby aplikacja nie tworzy³a bazy danych od nowa za ka¿dym razem zmieniæ create na update
 hibernate.hbm2ddl.auto = update
-hibernate.show_sql = true
+hibernate.show_sql = false
 hibernate.format_sql =  true
